--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ body{
 .player-1-panel {
     float: left;
     width: 50%;
-    height: 300px;
+    height: 600px;
     padding: 100px;
-    border: black solid 1px;
+    /* border: black solid 1px; */
 }
 
 .player-name{
@@ -56,13 +56,89 @@ body{
     text-align: center;
     color: red;
     font-size: 60px;
+    margin-bottom: 50px;
 }
 
 .player-current-box{
     border: solid black 1px;
     background-color: red;
     text-align: center;
-    margin: 30px;
     padding: 10px;
+    width: 40%;
+    margin: 0 auto;
     
 }
+
+.player-current-score{
+    color: #fff;
+    font-size: 30px;
+}
+
+.dice{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 10%;
+
+}
+
+.active { background-color: #f7f7f7; }
+.active .player-name { font-weight: 300; }
+
+.active .player-name::after {
+    content: "\2022";
+    font-size: 47px;
+    position: absolute;
+    color: #EB4D4D;
+    top: -7px;
+    right: 10px;
+    
+}
+
+
+button {
+    position: absolute;
+    /* width: 200px; */
+    left: 50%;
+    transform: translateX(-50%);
+    color: #555;
+    background: none;
+    border: none;
+    font-family: Lato;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 300;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+button:hover { font-weight: 600; }
+button:hover i { margin-right: 20px; }
+
+button:focus {
+    outline: none;
+}
+
+.btn-new { top: 45px;}
+.btn-roll { top: 403px;}
+.btn-hold { top: 467px;}
+
+
+/* font icons */
+i {
+    color: #EB4D4D;
+    display: inline-block;
+    margin-right: 15px;
+    font-size: 32px;
+    line-height: 1;
+    vertical-align: text-top;
+    margin-top: -4px;
+    transition: margin 0.3s;
+}
+
+
+
+
+.winner { background-color: #f7f7f7; }
+.winner .player-name { font-weight: 300; color: #EB4D4D; }
